--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-moment": "^1.1.2",
+    "react-redux": "^7.2.6",
+    "react-table": "^7.8.0",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
